⚡️ Change return type from id to problem when crawl problems